--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,46 +6,46 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-13
+dock_split_2=-271
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=286
-dock_hsplit_3=-754
+dock_hsplit_2=449
+dock_hsplit_3=-531
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_1.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/world_sprites/", "res://assets/Merchant Tileset Sidescroller/rock droid merchant/", "res://assets/Merchant Tileset Sidescroller/merchant/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/fly.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/Merchant Tileset Sidescroller/rock droid merchant/", "res://assets/Merchant Tileset Sidescroller/merchant/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/platforms/T.tscn", "res://scenes/game_1.tscn")
-current_scene="res://scenes/game_1.tscn"
-center_split_offset=-531
+open_scenes=PackedStringArray("res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/platforms/T.tscn", "res://scenes/slime.tscn", "res://scenes/hitbox.tscn", "res://scenes/hurtbox.tscn", "res://scenes/global.tscn", "res://scenes/coin.tscn", "res://scenes/game.tscn", "res://scenes/fly.tscn")
+current_scene="res://scenes/game.tscn"
+center_split_offset=-731
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scenes/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
-selected_script="res://scenes/nono.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/fly.gd", "res://scripts/game_manager.gd", "res://scripts/global.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
+selected_script="res://scripts/fly.gd"
 open_help=[]
-script_split_offset=206
+script_split_offset=300
 list_split_offset=0
-zoom_factor=1.28571
+zoom_factor=1.03634
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://scenes/global.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://scenes/global.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
