--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,24 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/fly.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/Merchant Tileset Sidescroller/rock droid merchant/", "res://assets/Merchant Tileset Sidescroller/merchant/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/global.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/word/", "res://assets/spritesOld/", "res://assets/Merchant Tileset Sidescroller/rock droid merchant/", "res://assets/Merchant Tileset Sidescroller/merchant/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/platforms/T.tscn", "res://scenes/slime.tscn", "res://scenes/hitbox.tscn", "res://scenes/hurtbox.tscn", "res://scenes/global.tscn", "res://scenes/coin.tscn", "res://scenes/game.tscn", "res://scenes/fly.tscn")
-current_scene="res://scenes/game.tscn"
-center_split_offset=-731
+open_scenes=PackedStringArray("res://scenes/word/exit.tscn")
+current_scene="res://scenes/word/exit.tscn"
+center_split_offset=-687
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/fly.gd", "res://scripts/game_manager.gd", "res://scripts/global.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
-selected_script="res://scripts/fly.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/exit.gd", "res://scripts/fly.gd", "res://scripts/game_manager.gd", "res://scripts/global.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
+selected_script="res://scripts/global.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
