--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/global.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/exit.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/word/", "res://assets/spritesOld/", "res://assets/Merchant Tileset Sidescroller/rock droid merchant/", "res://assets/Merchant Tileset Sidescroller/merchant/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,16 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/word/exit.tscn")
+open_scenes=PackedStringArray("res://scenes/word/exit.tscn", "res://scenes/game.tscn", "res://scenes/word/game_01.tscn", "res://scenes/word/game02.tscn", "res://scenes/player.tscn", "res://scenes/global.tscn")
 current_scene="res://scenes/word/exit.tscn"
 center_split_offset=-687
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/coin.gd", "res://scripts/exit.gd", "res://scripts/fly.gd", "res://scripts/game_manager.gd", "res://scripts/global.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
-selected_script="res://scripts/global.gd"
+selected_script="res://scripts/exit.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
