--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 55,
-"scroll_position": 47.0,
+"row": 56,
+"scroll_position": 9.66,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 13,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 90,
-"row": 55,
-"scroll_position": 46.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 55,
-"selection_to_column": 14,
-"selection_to_line": 62,
+"h_scroll_position": 0,
+"row": 56,
+"scroll_position": 39.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 8.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 7,
-"selection_to_column": 26,
-"selection_to_line": 7,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -123,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 34.58,
+"row": 57,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
