--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/fly.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/nono.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/Merchant Tileset Sidescroller/", "res://assets/Merchant Tileset Sidescroller/rock droid merchant/", "res://assets/Merchant Tileset Sidescroller/merchant/", "res://assets/main_c/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,16 +26,16 @@ dock_5="Inspector,History,Node"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/fly.tscn", "res://scenes/hitbox.tscn", "res://scenes/hurtbox.tscn", "res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/game.tscn", "res://scenes/slime.tscn")
-current_scene="res://scenes/fly.tscn"
-center_split_offset=-676
+current_scene="res://scenes/player.tscn"
+center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/exit.gd", "res://scripts/fly.gd", "res://scripts/global.gd", "res://scripts/hitbox.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
-selected_script="res://scripts/fly.gd"
+open_scripts=["res://scripts/exit.gd", "res://scripts/fly.gd", "res://scripts/global.gd", "res://scripts/hitbox.gd", "res://scripts/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
+selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
