--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 35,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 4.0,
-"selection": false,
+"row": 19,
+"scroll_position": 11.0,
+"selection": true,
+"selection_from_column": 32,
+"selection_from_line": 19,
+"selection_to_column": 41,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,10 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -62,9 +66,13 @@ state={
 "column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 6,
+"selection_to_column": 14,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +81,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 33.0,
+"row": 40,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 40,
+"selection_to_column": 20,
+"selection_to_line": 40,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/flyer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 3,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 49,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
