--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,29 +17,29 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/slime.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/world_sprites/", "res://assets/spritesOld/", "res://assets/nono_sprite/", "res://assets/Merchant Tileset Sidescroller/merchant/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/start_menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/word/", "res://assets/", "res://assets/world_sprites/", "res://assets/spritesOld/", "res://assets/Merchant Tileset Sidescroller/merchant/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,History,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/game.tscn", "res://scenes/slime.tscn", "res://scenes/nono.tscn", "res://scenes/flyer.tscn", "res://scenes/killzone.tscn", "res://scenes/start_menu.tscn", "res://scenes/global.tscn", "res://scenes/hitbox.tscn", "res://scenes/platform.tscn")
-current_scene="res://scenes/flyer.tscn"
+open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/game.tscn", "res://scenes/slime.tscn", "res://scenes/nono.tscn", "res://scenes/flyer.tscn", "res://scenes/killzone.tscn", "res://scenes/start_menu.tscn", "res://scenes/global.tscn", "res://scenes/hitbox.tscn", "res://scenes/platform.tscn", "res://scenes/word/exit.tscn", "res://scenes/word/game02.tscn", "res://scenes/word/game_01.tscn")
+current_scene="res://scenes/start_menu.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scenes/flyer.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scenes/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/start_menu.gd"]
-selected_script="res://scenes/flyer.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/exit.gd", "res://scenes/flyer.gd", "res://scripts/game_manager.gd", "res://scripts/global.gd", "res://scripts/killzone.gd", "res://scenes/nono.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/start_menu.gd"]
+selected_script="res://scripts/exit.gd"
 open_help=["Node2D"]
 script_split_offset=300
 list_split_offset=0
-zoom_factor=1.05032
+zoom_factor=1.02416
 
 [ShaderEditor]
 
