--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,28 +6,28 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-271
+dock_split_2=-268
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=569
-dock_hsplit_3=-432
+dock_hsplit_2=545
+dock_hsplit_3=-889
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/start_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/word/", "res://assets/", "res://assets/world_sprites/", "res://assets/spritesOld/", "res://assets/Merchant Tileset Sidescroller/merchant/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/Merchant Tileset Sidescroller/merchant/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,History,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/game.tscn", "res://scenes/slime.tscn", "res://scenes/nono.tscn", "res://scenes/flyer.tscn", "res://scenes/killzone.tscn", "res://scenes/start_menu.tscn", "res://scenes/global.tscn", "res://scenes/hitbox.tscn", "res://scenes/platform.tscn", "res://scenes/word/exit.tscn", "res://scenes/word/game02.tscn", "res://scenes/word/game_01.tscn")
-current_scene="res://scenes/start_menu.tscn"
-center_split_offset=-491
+open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/game.tscn", "res://scenes/start_menu.tscn", "res://scenes/game_1.tscn")
+current_scene="res://scenes/game_1.tscn"
+center_split_offset=-551
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
