--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 5,
-"scroll_position": 1.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 5,
-"selection_to_column": 12,
-"selection_to_line": 5,
+"h_scroll_position": 6,
+"row": 25,
+"scroll_position": 17.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -127,10 +123,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -141,16 +137,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 3,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 16,
-"selection_to_column": 32,
-"selection_to_line": 16,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -321,10 +313,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/game.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
