--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,25 +18,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_hidden.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/space/", "res://assets/space/Dynamic Space Background FREE/", "res://assets/Glacial-mountains-parallax-background_vnitti/Layers/", "res://assets/Fossil/", "res://addons/dialogic/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/Glacial-mountains-parallax-background_vnitti/Layers/", "res://addons/dialogic/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/start_menu.tscn", "res://scenes/game.tscn", "res://scenes/global.tscn", "res://scenes/hurtbox.tscn", "res://scenes/hitbox.tscn", "res://scenes/killzone.tscn", "res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/slime.tscn", "res://scenes/dialog_area.tscn", "res://scenes/coin.tscn", "res://scenes/pick.tscn", "res://scenes/game_1.tscn", "res://scenes/word/exit.tscn", "res://scenes/fly.tscn", "res://scenes/flyer.tscn", "res://scenes/game_hidden.tscn")
-current_scene="res://scenes/game_hidden.tscn"
+open_scenes=PackedStringArray("res://scenes/start_menu.tscn", "res://scenes/game.tscn", "res://scenes/global.tscn", "res://scenes/hurtbox.tscn", "res://scenes/hitbox.tscn", "res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/slime.tscn", "res://scenes/dialog_area.tscn", "res://scenes/coin.tscn", "res://scenes/pick.tscn", "res://scenes/game_1.tscn", "res://scenes/word/exit.tscn", "res://scenes/fly.tscn", "res://scenes/flyer.tscn", "res://scenes/game_hidden.tscn")
+current_scene="res://scenes/pick.tscn"
 center_split_offset=-543
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/dialog_area.gd", "res://scripts/exit.gd", "res://scripts/fly.gd", "res://scenes/flyer.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scenes/nono.gd", "res://scripts/pick.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
-selected_script="res://scenes/flyer.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/dialog_area.gd", "res://scripts/exit.gd", "res://scripts/fly.gd", "res://scenes/flyer.gd", "res://scenes/game.gd", "res://scripts/global.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scenes/nono.gd", "res://scripts/pick.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/start_menu.gd"]
+selected_script="res://scripts/pick.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
